social links open in a new tab

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Saturday Breakfast Serving
+                                    Breakfast Serving
                                 </div>
                                 <div class="project-name">
                                      We head to two homeless shelters and serve pastries, tea, coffee and more to the homeless there. This is a great experience that will broaden your perspective on the many blessings you may take for granted.
@@ -301,13 +301,13 @@
                     <hr class="primary">
                 </div>
                 <div class="col-lg-2 col-lg-offset-3 text-center">
-                    <a href="https://www.facebook.com/umdtzuching/"><i class="fa fa-facebook fa-3x sr-contact"></i></a>
+                    <a href="https://www.facebook.com/umdtzuching/" target="_blank"><i class="fa fa-facebook fa-3x sr-contact"></i></a>
                 </div>
                 <div class="col-lg-2 text-center">
                     <a href="mailto:umdtzuching@gmail.com"><i class="fa fa-envelope-o fa-3x sr-contact"></i></a>
                 </div>
                 <div class="col-lg-2 text-center">
-                    <a href="https://www.instagram.com/umdtzuching/"><i class="fa fa-instagram fa-3x sr-contact"></i></a>
+                    <a href="https://www.instagram.com/umdtzuching/" target="_blank"><i class="fa fa-instagram fa-3x sr-contact"></i></a>
                 </div>
             </div>
         </div>
