service text is shown without hover

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+                    <span class="sr-only">Toggle navigation</span><i class="fa fa-bars fa-2x"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">UMD Tzu Ching</a>
             </div>
@@ -178,7 +178,7 @@
         <br/>
         <div class="container">
             <div class="row">
-                <div class="col-lg-offset-5">
+                <div class="text-center">
                     <a href="https://www.tzuchi.us/mission/" class="btn btn-primary btn-xl text-center call-to-action">Learn More</a>
                 </div>
             </div>
@@ -211,7 +211,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Sunday NIH Dinner Serving
+                                    NIH Dinner Serving
                                 </div>
                                 <div class="project-name">
                                     The NIH Children's Inn provides care for families with children suffering from chronic illnesses. We have the opportunity to serve dinner to families currently residing at the Inn to help provide further care, support, and comfort.
@@ -226,7 +226,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Saturday Nursing Home
+                                    Nursing Home Visits
                                 </div>
                                 <div class="project-name">
                                      Participate in hand excercises, arts and crafts activities, and songs with the elderly.
@@ -300,13 +300,13 @@
                     <h2 class="section-heading">Connect with us!</h2>
                     <hr class="primary">
                 </div>
-                <div class="col-lg-2 col-lg-offset-3 text-center">
+                <div class="col-lg-2 col-lg-offset-3 text-center social-icon">
                     <a href="https://www.facebook.com/umdtzuching/" target="_blank"><i class="fa fa-facebook fa-3x sr-contact"></i></a>
                 </div>
-                <div class="col-lg-2 text-center">
+                <div class="col-lg-2 text-center social-icon">
                     <a href="mailto:umdtzuching@gmail.com"><i class="fa fa-envelope-o fa-3x sr-contact"></i></a>
                 </div>
-                <div class="col-lg-2 text-center">
+                <div class="col-lg-2 text-center social-icon">
                     <a href="https://www.instagram.com/umdtzuching/" target="_blank"><i class="fa fa-instagram fa-3x sr-contact"></i></a>
                 </div>
             </div>
