Calendar + Footer update
- embedded a Google Calendar for event sign-ups
- changed the style of the contact footer
- added the Tzu Ching logo to the navbar

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span><i class="fa fa-bars fa-2x"></i>
-                </button>
-        <a class="navbar-brand page-scroll" href="#page-top">UMD Tzu Ching</a>
+          <span class="sr-only">Toggle navigation</span><i class="fa fa-bars fa-2x"></i>
+        </button>
+        <a class="navbar-brand page-scroll" href="#page-top"><img class="navbar-brand-img" src="img/tclogo.png">UMD Tzu Ching</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -65,7 +65,7 @@
             <a class="page-scroll" href="#portfolio">Service</a>
           </li>
           <li>
-            <a class="page-scroll" href="#contact">Connect</a>
+            <a class="page-scroll" href="#footer">Connect</a>
           </li>
         </ul>
       </div>
@@ -296,42 +296,36 @@
     </div>
   </section>
 
-  <aside class="bg-dark">
+  <aside class="bg-gray">
     <div class="container text-center">
       <div class="call-to-action">
-        <h2>We hope to see you at one of our service events!</h2>
-        <a class="btn btn-default btn-xl sr-button page-scroll" disabled="disabled">Sign Up to Volunteer!</a>
+        <h2>Service Events Calendar</h2>
+        <h5>Click "more details" on the event to sign up.</h5>
+        <div class="embed-responsive embed-responsive-16by9 text-center">
+          <iframe class="embed-responsive-item" src="https://calendar.google.com/calendar/embed?showPrint=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=umdtzuching%40gmail.com&amp;color=%23182C57&amp;ctz=America%2FNew_York" style="border-width:0" width="1000" height="600" scrolling="no"></iframe>
+        </div>
       </div>
     </div>
   </aside>
 
-  <section id="contact">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 text-center">
-          <h2 class="section-heading">Connect with us!</h2>
-          <hr class="primary">
+  <footer id="footer" class="footer-container">
+    <div class="container-fluid">
+        <div class="row">
+          <div class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
+              <h5>© 2017 UMD Tzu Ching</h5>
+          </div>
+          <div class="col-xs-6 col-xs-offset-2 col-sm-4 col-sm-offset-5 col-md-3 col-md-offset-6 col-lg-2 col-lg-offset-7">
+              <div class="social-icons">
+                  <a href="https://www.facebook.com/umdtzuching/" target="_blank"><i class="fa fa-facebook fa-2x social-facebook"></i></a>
+                  <a href="https://twitter.com/umdtzuching" target="_blank"><i class="fa fa-twitter fa-2x social-twitter"></i></a>
+                  <a href="https://www.instagram.com/umdtzuching/" target="_blank"><i class="fa fa-instagram fa-2x social-instagram"></i></a>
+                  <a href="mailto:umdtzuching@gmail.com"><i class="fa fa-envelope-o fa-2x social-email"></i></a>
+              </div>
+              <h5>STAY CONNECTED</h5>
+          </div>
         </div>
-        <div class="col-lg-2 col-lg-offset-3 text-center social-icon">
-          <a href="https://www.facebook.com/umdtzuching/" target="_blank"><i class="fa fa-facebook fa-3x sr-contact"></i></a>
-        </div>
-        <div class="col-lg-2 text-center social-icon">
-          <a href="https://twitter.com/umdtzuching" target="_blank"><i class="fa fa-twitter fa-3x sr-contact"></i></a>
-        </div>
-        <div class="col-lg-2 text-center social-icon">
-          <a href="https://www.instagram.com/umdtzuching/" target="_blank"><i class="fa fa-instagram fa-3x sr-contact"></i></a>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 text-center social-icon">
-          <a href="mailto:umdtzuching@gmail.com"><i class="fa fa-envelope-o fa-3x sr-contact"></i></a>
-        </div>
-      </div>
     </div>
-    <div class="footer-text col-lg-8 col-lg-offset-2 text-center">
-      <h5>© 2017 UMD Tzu Ching</h5>
-    </div>
-  </section>
+  </footer>
 
   <!-- jQuery -->
   <script src="vendor/jquery/jquery.min.js"></script>
