sign up + lower res banner

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
             <a class="page-scroll" href="#portfolio">Service</a>
           </li>
           <li>
+              <a class="page-scroll" href="#signup">Sign Up</a>
+          </li>
+          <li>
             <a class="page-scroll" href="#footer">Connect</a>
           </li>
         </ul>
@@ -101,7 +104,7 @@
 
   <!-- Mission -->
 
-  <section id="services">
+  <section class="half-padding" id="services">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -199,7 +202,15 @@
 
   <!-- Services -->
 
-  <section class="no-padding" id="portfolio">
+  <section class="half-padding" id="portfolio">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading">How We Serve</h2>
+          <hr class="primary">
+        </div>
+      </div>
+    </div>
     <div class="container-fluid">
       <div class="row no-gutter popup-gallery">
         <div class="col-lg-4 col-sm-6">
@@ -296,17 +307,18 @@
     </div>
   </section>
 
-  <aside class="bg-gray">
+  <section id="signup" class="bg-gray">
     <div class="container text-center">
       <div class="call-to-action">
         <h2>Service Events Calendar</h2>
+        <hr class="primary">
         <h5>Click "more details" on the event to sign up.</h5>
         <div class="embed-responsive embed-responsive-16by9 text-center">
           <iframe class="embed-responsive-item" src="https://calendar.google.com/calendar/embed?showPrint=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=umdtzuching%40gmail.com&amp;color=%23182C57&amp;ctz=America%2FNew_York" style="border-width:0" width="1000" height="600" scrolling="no"></iframe>
         </div>
       </div>
     </div>
-  </aside>
+  </section>
 
   <footer id="footer" class="footer-container">
     <div class="container-fluid">
