smaller banner size + responsive footer

--- a/index.html
+++ b/index.html
@@ -323,17 +323,17 @@
   <footer id="footer" class="footer-container">
     <div class="container-fluid">
         <div class="row">
-          <div class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
+          <div class="col-xs-5 col-sm-3 col-md-3 col-lg-2">
               <h5>© 2017 UMD Tzu Ching</h5>
           </div>
-          <div class="col-xs-6 col-xs-offset-2 col-sm-4 col-sm-offset-5 col-md-3 col-md-offset-6 col-lg-2 col-lg-offset-7">
-              <div class="social-icons">
+          <div class="col-xs-offset-4 col-sm-offset-5 col-md-offset-5 col-lg-offset-7">
+              <div class="social-icons pull-right">
                   <a href="https://www.facebook.com/umdtzuching/" target="_blank"><i class="fa fa-facebook fa-2x social-facebook"></i></a>
                   <a href="https://twitter.com/umdtzuching" target="_blank"><i class="fa fa-twitter fa-2x social-twitter"></i></a>
                   <a href="https://www.instagram.com/umdtzuching/" target="_blank"><i class="fa fa-instagram fa-2x social-instagram"></i></a>
                   <a href="mailto:umdtzuching@gmail.com"><i class="fa fa-envelope-o fa-2x social-email"></i></a>
               </div>
-              <h5>STAY CONNECTED</h5>
+              <h5 class="pull-right">STAY CONNECTED</h5>
           </div>
         </div>
     </div>
