changed wording for sign up.

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
       <div class="call-to-action">
         <h2>Service Events Calendar</h2>
         <hr class="primary">
-        <h5>Click "more details" on the event to sign up.</h5>
+        <h5>Click on the event to sign up!</h5>
         <div class="embed-responsive embed-responsive-16by9 text-center">
           <iframe class="embed-responsive-item" src="https://calendar.google.com/calendar/embed?showPrint=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=umdtzuching%40gmail.com&amp;color=%23182C57&amp;ctz=America%2FNew_York" style="border-width:0" width="1000" height="600" scrolling="no"></iframe>
         </div>
