fixed navbar typo

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<li><a href="#" data-nav-section="team">Board</a></li>
 							<li><a href="#" data-nav-section="services">Service</a></li>
 							<li><a href="#" data-nav-section="faq">FAQ</a></li>
-							<li><a href="#" data-nav-section="calendar">Calender</a></li>
+							<li><a href="#" data-nav-section="calendar">Calendar</a></li>
 							<li><a href="#" data-nav-section="contact">Contact</a></li>
 						</ul>
 					</div>
