edited service event descriptions and modified FAQ ordering&content

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 							<img src="images/services/dinner-serving-1.jpg" alt="NIH Dinner Serving">
 							<div class="caption">
 								<h3 class="text-center">NIH Dinner Serving</h3>
-								<p>The NIH Children's Inn provides care for families with children suffering from chronic illnesses. We have the opportunity to serve dinner to families currently residing at the Inn to help provide further care, support, and comfort.</p>
+								<p>The Children’s Inn provides a home for those children seeking care at the National Institutes of Health (NIH). We have the opportunity to serve dinners currently staying at the Inn to help provide further care, support, and comfort.</p>
 							</div>
 						</div>
 					</div>
@@ -388,7 +388,7 @@
 							<img src="images/services/buzzing-bees-1.jpg" alt="Buzzing Bees">
 							<div class="caption">
 								<h3 class="text-center">Buzzing Bees After School Program</h3>
-								<p>Every week, we visit the students at Paint Branch Elementary to talk about values they can apply to their everyday lives. Join us this Wednesday as we talk about life values and spend time with the students!</p>
+								<p>Every week, we visit the students at Paint Branch Elementary School to talk about values they can apply to their everyday lives. Join us this Wednesday as we talk about life values and spend time with the students!</p>
 							</div>
 						</div>
 					</div>
@@ -436,13 +436,13 @@
 								<div class="panel-heading" role="tab" id="faq1">
 									<h4 class="panel-title">
 										<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-											When are your General Body Meetings?
+											What is UMDTC?
 										</a>
 									</h4>
 								</div>
 								<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="faq1">
 									<div class="panel-body">
-										We have our general body meeting (GBM) the first friday of every month in the academic year. We usually have them at 6pm at a specified location. We talk about different topics and values each meeting and top it off with delicious homecooked Taiwanese food. Follow us on Facebook to stay updated on events and see you at GBM!
+										We are a service-based organization that focuses on more than just helping the community. We want our members and volunteers to grow as people through service, and we focus on values and the meaning of why we serve. If you have any desire to help other people, we can guarantee that there’s a place for you in UMDTC.
 									</div>
 								</div>
 							</div>
@@ -450,13 +450,13 @@
 								<div class="panel-heading" role="tab" id="faq2">
 									<h4 class="panel-title">
 										<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-											What kind of student organization is this?
+											What is the vision of UMDTC?
 										</a>
 									</h4>
 								</div>
 								<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="faq2">
 									<div class="panel-body">
-										We are a service-based organization that focuses on more than just helping the community. We want our members and volunteers to grow as people through service, and we like to focus on values and the meaning of why we serve. If you have any desire to help other people, we can guarantee that there’s a place for you in TC.
+										At UMDTC, we want to create a welcoming and open atmosphere for members. We hope that through service, members will learn more about themselves and about others, and will be able to take away lessons that they can apply to their everyday lives.
 									</div>
 								</div>
 							</div>
@@ -464,13 +464,13 @@
 								<div class="panel-heading" role="tab" id="faq3">
 									<h4 class="panel-title">
 										<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-											Is TC Religious?
+											What types of events are there?
 										</a>
 									</h4>
 								</div>
 								<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="faq3">
 									<div class="panel-body">
-										Tzu Chi Foundation was founded by a Buddhist monk in 1966, but it stands primarily as a service organization. That being said, we will never try to proselytize anyone or make them do anything they are not comfortable with. We have a wide varieties of faiths and religions at UMDTC, and we want to make sure that continues!
+										We have a variety of service events, but we like to have fun too! Scroll to find out more about our longitudinal and recurring service events, and keep a lookout for our club socials as well.
 									</div>
 								</div>
 							</div>
@@ -478,13 +478,13 @@
 								<div class="panel-heading" role="tab" id="faq8">
 									<h4 class="panel-title">
 										<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
-											Do I have to pay to join this organization?
+											How do I sign up to attend events?
 										</a>
 									</h4>
 								</div>
 								<div id="collapseEight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="faq8">
 									<div class="panel-body">
-										Absolutely not! There are no dues, fees, or obligations you need to join TC. If you are available for a service event, we would love to have you for it, but there is no pressure in meeting a certain requirement or paying anything.
+										If you scroll down to the calendar, you will find our service events listed for the current month. Click an event, find the “Sign-up Here” link, and fill out the form to sign up! Additionally, we send an email once a week with all of the service events that are happening and you can sign up from there as well.
 									</div>
 								</div>
 							</div>
@@ -492,13 +492,13 @@
 								<div class="panel-heading" role="tab" id="faq9">
 									<h4 class="panel-title">
 										<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
-											Is this organization only at UMD?
+											Do I have to pay to join this organization?
 										</a>
 									</h4>
 								</div>
 								<div id="collapseNine" class="panel-collapse collapse" role="tabpanel" aria-labelledby="faq9">
 									<div class="panel-body">
-										Nope! While TC is an international organization, the Tzu Ching branch has established chapters all over the United States and all over the globe. Tzu Ching chapters can be found at schools such as: University of California Los Angeles, Emory University, University of California San Diego, New York University, The University of Texas at Austin, Texas A&M, and more. College students just like us are doing service all over the United States, and the Tzu Ching network spans far beyond UMD!
+										Absolutely not! There are no dues, fees, or obligations you need to join TC. If you are available for a service event, we would love to have you join!
 									</div>
 								</div>
 							</div>
@@ -512,15 +512,13 @@
 								<div class="panel-heading" role="tab" id="faq10">
 									<h4 class="panel-title">
 										<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTen" aria-expanded="false" aria-controls="collapseTen">
-											Why do we have a uniform?
+											When are your General Body Meetings?												
 										</a>
 									</h4>
 								</div>
 								<div id="collapseTen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="faq10">
 									<div class="panel-body">
-										Tzu Chi is an international humanitarian organization that does a lot of disaster relief all over the world. While we do not require you to wear the uniform, it is meant to represent keeping your mind as “clear as the sky” with the blue polo, and as “pure as the clouds” with the white pants.
-										<br /><br />
-										There are millions of TC volunteers stationed all over the world and when disaster strikes, thousands of people can be affected in a certain area. TC volunteers wear the uniform so that those that are in need can recognize that the volunteers are people there to help them. It also gives a sense of anonymity: volunteers are not standing as individuals, but are there to represent TC as  whole.
+										We have our general body meetings (GBMs) on the first Friday of every month of the academic year. We usually have them at 6 PM at a specified location. We talk about different topics and values at each meeting and top it off with delicious home-cooked Taiwanese food. Follow us on Facebook to stay updated on events and see you at GBM!
 									</div>
 								</div>
 							</div>
@@ -528,13 +526,13 @@
 								<div class="panel-heading" role="tab" id="faq4">
 									<h4 class="panel-title">
 										<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-											How do I get a uniform?
+											Is this organization only at UMD?
 										</a>
 									</h4>
 								</div>
 								<div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="faq4">
 									<div class="panel-body">
-										The blue polo and white pants are definitely a fashion statement, but you need to complete 20 hours of service with us in order to earn your uniform. Check out our calendar of events or sign-up to be on our email list for all of our service opportunities!
+										Nope! Tzu Ching chapters have been established all over the United States and all around the world. Tzu Ching chapters can be found at schools such as: Emory University, New York University, the University of California Los Angeles, the University of California San Diego, the University of Michigan, and the University of Texas at Austin, and more. College students just like us are doing service all over the United States, and the Tzu Ching network spans far beyond UMD!
 									</div>
 								</div>
 							</div>
@@ -542,13 +540,15 @@
 								<div class="panel-heading" role="tab" id="faq5">
 									<h4 class="panel-title">
 										<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion2" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-											What is UMDTC as a student organization trying to achieve?
+											Why do we have a uniform?
 										</a>
 									</h4>
 								</div>
 								<div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="faq5">
 									<div class="panel-body">
-										At UMDTC, we want to create a welcoming and open atmosphere for members. We hope that through service, members will learn more about themselves and about others, and will be able to take away lessons that they can apply to their everyday lives.
+										Tzu Chi is an internationally-recognized humanitarian organization that responds to disasters all over the world. When disaster strikes, thousands of people can be affected. TC volunteers wear the uniform so that those that are in need can recognize that the volunteers are people there to help them. It also gives a sense of anonymity: volunteers are not standing as individuals, but are there to represent TC as whole.
+										<br><br>
+										While we do not require you to wear the uniform, we hope you keep in mind the spirit of the uniform. The uniform’s blue polo and white pants represents keeping your mind as “clear as the sky” and as  “pure as the clouds.”
 									</div>
 								</div>
 							</div>
@@ -556,13 +556,13 @@
 								<div class="panel-heading" role="tab" id="faq6">
 									<h4 class="panel-title">
 										<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion2" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-											What types of events do you have?
+											How do I get a uniform?
 										</a>
 									</h4>
 								</div>
 								<div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="faq6">
 									<div class="panel-body">
-										We have a variety of service events but we like to have fun too! Scroll (up/down) to find out more about our longitudinal and recurring service events, and keep a lookout for our club socials as well.
+										The blue polo and white pants are definitely a fashion statement, but you need to complete 20 hours of service with us and attend an orientation to wear the uniform. Check out our calendar of events or sign-up to be on our email list for all of our service opportunities!
 									</div>
 								</div>
 							</div>
@@ -570,13 +570,13 @@
 								<div class="panel-heading" role="tab" id="faq7">
 									<h4 class="panel-title">
 										<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-											How do you sign up to attend the events?
+											Is UMDTC a religious organization?
 										</a>
 									</h4>
 								</div>
 								<div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="faq7">
 									<div class="panel-body">
-										If you scroll down to the calendar, you will find our service events listed for the current month. Click an event, find the “Sign-up Here” link, and fill out the form to sign up! Additionally, we send an email once a week with all of the service events that are happening and you can sign up from there as well.
+										While Tzu Chi was founded by a Buddhist monk, it has helped people of all faiths and backgrounds. TC volunteers do not proselytize or force people to do anything they may not be comfortable with. Here at UMDTC, we simply aim to serve others with gratitude, respect, and love. Our volunteers are of a variety of different faiths and religions - and we want to make sure that continues!
 									</div>
 								</div>
 							</div>
