--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 							<div class="col-sm-4 col-md-4">
 								<div class="team-box text-center">
 									<div class="user"><img class="img-reponsive" src="images/eboard/service3.jpg" alt="Kathy Chen"></div>
-									<h3>Kathy Chen</h3>
+									<h3>Kathy Sheng</h3>
 									<span class="position">Service Chair</span>
 								</div>
 							</div>
