In the index.html, replaced the images and names of the current Eboard members. Also added a new section for next semester's Junior Officers. Had to add to the style.css for the Junior Officer section, basically copied the styling for the Eboard section but also had to reference an outside stylesheet to have 5 members in a row. Pain in the ass honestly LOL.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400, 900" rel="stylesheet">
 
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Bootstrap  -->
@@ -41,6 +42,8 @@
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
+	
+
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
@@ -68,6 +71,7 @@
 							<li><a href="#" data-nav-section="about">About</a></li>
 							<li><a href="#" data-nav-section="missions">Mission</a></li>
 							<li><a href="#" data-nav-section="team">Board</a></li>
+							<li><a href="#" data-nav-section="officers">Junior Officers</a></li>
 							<li><a href="#" data-nav-section="services">Service</a></li>
 							<li><a href="#" data-nav-section="faq">FAQ</a></li>
 							<li><a href="#" data-nav-section="calendar">Calendar</a></li>
@@ -266,7 +270,7 @@
 			<div class="container">
 				<div class="row row-pb-md">
 					<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
-						<h1>Board</h1>
+						<h1>Executive Board</h1>
 						<p class="sub">Meet our current UMDTC e-board members!</p>
 					</div>
 				</div>
@@ -275,24 +279,24 @@
 						<div class="row animate-box" data-animate-effect="fadeInUp">
 							<div class="col-sm-4 col-md-4">
 								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/president1.jpg" alt="Ryan Chang"></div>
-									<h3>Ryan Chang</h3>
+									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="David Ho"></div>
+									<h3>David Ho</h3>
 									<span class="position">Co-President</span>
 								</div>
 							</div>
 
 							<div class="col-sm-4 col-md-4">
 								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/president2.jpg" alt="Alex Zhang"></div>
-									<h3>Alex Zhang</h3>
+									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Kathy Sheng"></div>
+									<h3>Kathy Sheng</h3>
 									<span class="position">Co-President</span>
 								</div>
 							</div>
 
 							<div class="col-sm-4 col-md-4">
 								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/advisor.jpg" alt="Alex Pu"></div>
-									<h3>Alex Pu</h3>
+									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Jimmy Lei"></div>
+									<h3>Jimmy Lei</h3>
 									<span class="position">Senior Advisor</span>
 								</div>
 							</div>
@@ -301,24 +305,24 @@
 						<div class="row animate-box" data-animate-effect="fadeInUp">
 							<div class="col-sm-4 col-md-4">
 								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/service1.jpg" alt="Ashley Chang"></div>
-									<h3>Ashley Chang</h3>
+									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Andy Guan"></div>
+									<h3>Andy Guan</h3>
 									<span class="position">Service Chair</span>
 								</div>
 							</div>
 
 							<div class="col-sm-4 col-md-4">
 								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/service2.jpg" alt="Chris Chen"></div>
-									<h3>Chris Chen</h3>
+									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Joon Hwang"></div>
+									<h3>Joon Hwang</h3>
 									<span class="position">Service Chair</span>
 								</div>
 							</div>
 
 							<div class="col-sm-4 col-md-4">
 								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/service3.jpg" alt="Kathy Chen"></div>
-									<h3>Kathy Sheng</h3>
+									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Leonard Liu"></div>
+									<h3>Leonard Liu</h3>
 									<span class="position">Service Chair</span>
 								</div>
 							</div>
@@ -327,25 +331,86 @@
 						<div class="row animate-box" data-animate-effect="fadeInUp">
 							<div class="col-sm-4 col-md-4">
 								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/treasurer.jpg" alt="Jimmy Lei"></div>
-									<h3>Jimmy Lei</h3>
+									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Joseph Deng"></div>
+									<h3>Joseph Deng</h3>
 									<span class="position">Treasurer</span>
 								</div>
 							</div>
 
 							<div class="col-sm-4 col-md-4">
 								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/publicrelations.jpg" alt="David Ho"></div>
-									<h3>David Ho</h3>
+									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Grant Joe"></div>
+									<h3>Grant Joe</h3>
 									<span class="position">Public Relations</span>
 								</div>
 							</div>
 
 							<div class="col-sm-4 col-md-4">
 								<div class="team-box text-center">
-									<div class="user"><img class="img-reponsive" src="images/eboard/media.jpg" alt="Justin Chan"></div>
-									<h3>Justin Chan</h3>
+									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Shio Lee"></div>
+									<h3>Shio Lee</h3>
 									<span class="position">Media Chair</span>
+								</div>
+							</div>
+						</div>
+
+						<div class="row animate-box" data-animate-effect="fadeInUp">
+							<div class="col-sm-4 col-md-4 col-md-offset-4">
+								<div class="team-box text-center">
+									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Matthew Tung"></div>
+									<h3>Matthew Tung</h3>
+									<span class="position">Media Chair</span>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section id="umdtc-junior-officers" data-section="officers">
+			<div class="container">
+				<div class="row row-pb-md">
+					<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
+						<h1>Junior Officers</h1>
+						<p class="sub">Welcome our new Junior Officers for the upcoming semester!</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-12 animate-box" data-animate-effect="fadeIn">
+						<div class="row animate-box" data-animate-effect="fadeInUp">
+							<div class="col col1">
+								<div class="officers-box text-center">
+									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Elise Ahn"></div>
+									<h3>Elise Ahn</h3>
+								</div>
+							</div>
+
+							<div class="col col2">
+								<div class="officers-box text-center">
+									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Ig-Jun Cho"></div>
+									<h3>Ig-Jun Cho</h3>
+								</div>
+							</div>
+
+							<div class="col col3">
+								<div class="officers-box text-center">
+									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Andrew Liu"></div>
+									<h3>Andrew Liu</h3>
+								</div>
+							</div>
+
+							<div class="col col4">
+								<div class="officers-box text-center">
+									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Jacob Wagner"></div>
+									<h3>Jacob Wagner</h3>
+								</div>
+							</div>
+
+							<div class="col col5">		
+								<div class="officers-box text-center">
+									<div class="user"><img class="img-reponsive" src="images/eboard/temp_photo.png" alt="Christine Wan"></div>
+									<h3>Christine Wan</h3>
 								</div>
 							</div>
 						</div>
